<resources>
    <string name="app_name">Quick Shot</string>
    <string name="target_is">Your target</string>
    <string name="score">Score</string>
    <string name="high_score">High Score</string>
    <string name="choice">Choice</string>
    <string name="game_over">Game Over</string>
    <string name="your_target_was">Your target was</string>
    <string name="you_hit">You hit</string>
    <string name="nothing">Nothing!</string>
    <string name="restart">Restart</string>
    <string name="resume">Resume</string>
    <string name="correct1">Nice!</string>
    <string name="correct2">Good work!</string>
    <string name="correct3">Correct!</string>
</resources>
