<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".game_over">


    <TextView
        android:id="@+id/gameOver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:text="@string/game_over"
        android:textSize="48sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/yourScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameOver" />


    <TextView
        android:id="@+id/highScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/high_score"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameOver" />

    <TextView
        android:id="@+id/yourTargetWas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/your_target_was"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="@+id/targetImage"
        app:layout_constraintRight_toRightOf="@+id/targetImage"
        app:layout_constraintTop_toBottomOf="@+id/highScore" />

    <ImageButton
        android:id="@+id/targetImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/c1"
        app:layout_constraintTop_toBottomOf="@+id/yourTargetWas"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/hitImage"
        android:contentDescription="@string/choice" />

    <ImageButton
        android:id="@+id/targetImageb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/m1"
        android:background="@null"
        android:contentDescription="@string/choice"
        app:layout_constraintRight_toRightOf="@+id/targetImage"
        app:layout_constraintLeft_toLeftOf="@+id/targetImage"
        app:layout_constraintBottom_toBottomOf="@+id/targetImage"
        app:layout_constraintTop_toTopOf="@+id/targetImage" />

    <ImageButton
        android:id="@+id/targetImagec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/e1"
        android:background="@null"
        android:contentDescription="@string/choice"
        app:layout_constraintRight_toRightOf="@+id/targetImage"
        app:layout_constraintLeft_toLeftOf="@+id/targetImage"
        app:layout_constraintBottom_toBottomOf="@+id/targetImage"
        app:layout_constraintTop_toTopOf="@+id/targetImage" />

    <TextView
        android:id="@+id/yourHit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/you_hit"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="@id/hitImage"
        app:layout_constraintRight_toRightOf="@id/hitImage"
        app:layout_constraintTop_toBottomOf="@+id/highScore" />

    <ImageButton
        android:id="@+id/hitImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/c1"
        app:layout_constraintTop_toBottomOf="@+id/yourTargetWas"
        app:layout_constraintLeft_toRightOf="@+id/targetImage"
        app:layout_constraintRight_toRightOf="parent"
        android:contentDescription="@string/choice" />

    <ImageButton
        android:id="@+id/hitImageb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/m1"
        android:background="@null"
        android:contentDescription="@string/choice"
        app:layout_constraintRight_toRightOf="@+id/hitImage"
        app:layout_constraintLeft_toLeftOf="@+id/hitImage"
        app:layout_constraintBottom_toBottomOf="@+id/hitImage"
        app:layout_constraintTop_toTopOf="@+id/hitImage" />

    <ImageButton
        android:id="@+id/hitImagec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/e1"
        android:background="@null"
        android:contentDescription="@string/choice"
        app:layout_constraintRight_toRightOf="@+id/hitImage"
        app:layout_constraintLeft_toLeftOf="@+id/hitImage"
        app:layout_constraintBottom_toBottomOf="@+id/hitImage"
        app:layout_constraintTop_toTopOf="@+id/hitImage" />

    <TextView
        android:id="@+id/nothingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nothing"
        android:textSize="32sp"
        android:rotation="-15"
        app:layout_constraintRight_toRightOf="@+id/hitImage"
        app:layout_constraintLeft_toLeftOf="@+id/hitImage"
        app:layout_constraintBottom_toBottomOf="@+id/hitImage"
        app:layout_constraintTop_toTopOf="@+id/hitImage" />

    <Button
        android:id="@+id/restartButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/choice"
        android:text="@string/restart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>